<resources>
    <string name="app_name">SimpleCoffee</string>
    <string name="ask_for_signup">Do not have an existing account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="simple_coffee">SIMPLE COFFEE</string>
    <string name="sign_in_notif">Login to\nyour account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="your_order">Your Order</string>
    <string name="more">More</string>
    <string name="table">Table Status</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="avatar">Avatar</string>
    <string name="camera">camera</string>
    <string name="update">Update</string>
    <string name="our_drink">Our Drink</string>
    <string name="img_des">background</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="register_title">Register an account</string>
    <string name="register_btn">Sign up</string>
    <string name="Today_txt">Today</string>
    <string name="This_week_txt">This week</string>
    <string name="This_month_txt">This month</string>
    <string name="This_year_txt">This year</string>
    <string name="All_txt">All</string>
    <string name="order_history">Order History</string>
    <string name="my_account">My account</string>
    <string name="account_information">Account information</string>
    <string name="saved_address">Saved address</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="my_saved_address">My saved address</string>
    <string name="add_new_contact">Add a new contact</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="address">Your address</string>
    <string name="phone">Phone</string>
    <string name="remove">Remove this</string>
    <string name="utility">Utility</string>
    <string name="revenue">Revenue</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="in_total">IN TOTAL</string>
    <string name="amount_of_complete_order">Amount of complete order:</string>
    <string name="drinks_quantity">Drinks quantity:</string>
    <string name="best_selling_drink">Best selling:</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="etc">…</string>
    <string name="date_picker_icon">Date Picker</string>
    <string name="statistic">Statistic</string>
    <string name="coffee_icon">Coffee icon</string>
    <string name="add_icon">Add Icon</string>
    <string name="user_icon">User icon</string>
    <string name="forward_icon">Forward icon</string>
    <string name="saved_address_icon">Saved address icon</string>
    <string name="sign_in_icon">Sign in icon</string>
    <string name="sign_out_icon">Sign out icon</string>
    <string name="order_history_icon">Order history icon</string>
    <string name="table_icon">Table icon</string>
    <string name="statistic_icon">Statistic icon</string>
    <string name="cart_icon">Cart icon</string>
    <string name="gender_icon">Gender icon</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="your_cart">Your Cart</string>
    <string name="total">Total:</string>
    <string name="clear">Clear All</string>
    <string name="select_contact">Please select a contact</string>
    <string name="no_order_these_days">NO ORDER ON THESE DAYS</string>
    <string name="no_order">NO ORDER</string>
    <string name="no_order_tracking">BACK TO MENU FOR ORDERING ONE</string>
    <string name="customer_order">Customer\'s order</string>
    <string name="cart">Cart</string>
    <string name="no_thing_in_cart">NOTHING IN CART!\nORDER SOMETHING IN MENU!</string>
    <string name="customer_email">Customer\'s Email</string>
    <string name="select_table">[Select a table]</string>
    <string name="no_table_left">No Table Left</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bill_id">Bill ID</string>
    <string name="order_detail">Order Detail</string>
    <string name="request_for_cancel">Request for cancelling</string>
    <string name="accept_cancel">Accept</string>
    <string name="mark_as_empty">Mark As Empty</string>
    <string name="table_status">Table Status</string>
    <string name="add_new_table">Add a new table</string>
    <string name="table_detail">Table Detail</string>
    <string name="select_size">[Select Table Size...]</string>
    <string name="select_shape">[Select Shape...]</string>
</resources>