<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.project.simplecoffee.presentation.contact.ContactDetailVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_15dp"
        tools:context=".presentation.contact.ContactDetailFragment">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_saved_address"
            android:textAppearance="@style/header_setting"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="Name"
            android:background="@drawable/input_text_background"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={viewModel.name}"
            android:textAppearance="@style/tv_black16"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="Your address"
            android:background="@drawable/input_text_background"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp"
            android:text="@={viewModel.address}"
            android:textAppearance="@style/tv_black16"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="Phone"
            android:background="@drawable/input_text_background"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:text="@={viewModel.phone}"
            android:textAppearance="@style/tv_black16"
            app:layout_constraintTop_toBottomOf="@+id/input_address" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_done"
            android:elevation="@dimen/_15dp"
            android:onClick="@{() -> viewModel.onDoneClick()}"
            android:padding="5dp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textAppearance="@style/btn_common_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_phone" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:onClick="@{() -> viewModel.onRemoveClick()}"
            android:padding="5dp"
            android:visibility="@{viewModel.removeVisibility}"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/header">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trash" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>